// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Actions Menu block options copies and pastes a block 1`] = `
"<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Block Actions Menu block options cuts and pastes a block 1`] = `
"<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->

<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->"
`;

exports[`Block Actions Menu block options does not replace a non empty Paragraph block when pasting another block 1`] = `
"<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Block Actions Menu block options duplicates a block 1`] = `
"<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Block Actions Menu block options transforms a Paragraph block into a Pullquote block 1`] = `
"<!-- fp:pullquote -->
<figure class="fp-block-pullquote"><blockquote><p>Hello!</p></blockquote></figure>
<!-- /fp:pullquote -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Block Actions Menu moving blocks disables the Move Down button for the last block 1`] = `
"<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Block Actions Menu moving blocks disables the Move Up button for the first block 1`] = `
"<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->

<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->"
`;

exports[`Block Actions Menu moving blocks moves blocks up and down 1`] = `
"<!-- fp:heading -->
<h2 class="fp-block-heading"></h2>
<!-- /fp:heading -->

<!-- fp:paragraph -->
<p>Hello!</p>
<!-- /fp:paragraph -->

<!-- fp:spacer -->
<div style="height:100px" aria-hidden="true" class="fp-block-spacer"></div>
<!-- /fp:spacer -->"
`;
